# SO-Aprobado

./: .gitignore  clean.sh  deploy.sh  folterPuebaFileSystem.sh  folterPuebaKernel.sh  folterPuebaMemoria.sh  folterPuebaStress.sh
FileSystem/: CMakeLists.txt  Fileconfig  FileconfigCompactacion  FileconfigKernel  _Fileconfig  makefile
FileSystem/src/: FileSystem.c  Funciones.c  Funciones.h  Semaforos.c  Semaforos.h  archivos.c  archivos.h  buscar.c  buscar.h  hiloClientes.c  hiloClientes.h  hiloCompactacion.c  hiloCompactacion.h  hiloConsola.c  hiloConsola.h  hiloDump.c  hiloDump.h  hiloInotify.c  hiloInotify.h  hiloSelect.c  manejoArchivos.c  manejoArchivos.h  operaciones.c  operaciones.h
example/: CMakeLists.txt  Test.c  TestEnvioMensaje.c  listaMemoria.c  listaMetadata.c  makefile  registro.c
example/gossiping-v2/: main.c  memoria1.config  memoria2.config  memoria3.config
example/memTest/: console.c  console.h  main.c  main.h  segmentacionPaginada.c  segmentacionPaginada.h  test
funcionesCompartidas/: makefile
funcionesCompartidas/funcionesCompartidas/: API.c  API.h  codigoMensajes.c  codigoMensajes.h  listaMemoria.c  listaMemoria.h  listaMetadata.c  registroTabla.c  registroTabla.h  time.c  time.h
kernel/: kernel.config  makefile
kernel/src/: consola.c  consola.h  contracts.c  contracts.h  load_config.c  load_config.h  main.c  metricas.c  metricas.h  requestMemoria.c  requestMemoria.h  (+10 more)
memoria/: Memoria  makefile  memoria1.config  memoria2.config  memoria3.config  memoria4.config  memoriaConf.config  memoriaConf2.config  memoriaConf3.config  script.lql
(+28 files in other folders)
